[package]
name = "hyperound"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.6.9"
solana-sdk = "1.7.11"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
spl-token-metadata = "0.0.1"
thiserror = "1.0.24"
arrayref = "0.3.6"
borsh = "0.9.1"

[lib]
crate-type = ["cdylib", "lib"]
